--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="./images/team4.png" alt="two architects discussing">
             </div>
             <div class="our-features">
-                <h3 class="section-title"><span id="quick-list" class="text-light-gray ">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray ">Quick List</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
                 <p class="feature-dis text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
             </div>
@@ -47,8 +47,37 @@
         </section>
 
         <!-- features will enjoy -->
-         <section>
-
+         <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            
+            <!-- features card added -->
+             <div class="features-card">
+                <h3 class="features-title">Desktop & Mobile Version</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             <div class="features-card">
+                <h3 class="features-title">Drag & Drop Builder</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             <div class="features-card">
+                <h3 class="features-title">Awesome Modern Design</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             <div class="features-card">
+                <h3 class="features-title">Super Easy to Edit</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             </div>
+            <div>
+                <img src="./images/architect.png" alt="">
+                <button id="experinece-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
          </section>
 
          <!-- Our  some fact -->
@@ -89,7 +118,21 @@
         </div>
         </section>
 
-          <!--  -->
+          <!-- our Sponspors -->
+           <section class="our-sponspors">
+            <div class="sponspors-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponser-companies">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+                
+            </div>
+           </section>
     </main>
     <footer>
 
