--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             </div>
            </section>
     </main>
-    <footer>
-        
+    <footer class="footer-des">
+        <p  class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
